--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-multi-date-picker": "^4.1.2",
     "react-otp-input": "^3.0.2",
     "react-rating": "^2.0.5",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
