--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-REACT_APP_BASE_URL="http://localhost:3200/api/v1"
+REACT_APP_BASE_URL="http://rentnation-env.eba-kuqp4kxg.us-east-1.elasticbeanstalk.com/api/v1"
+# REACT_APP_PLACES_API_KEY="AIzaSyDHZJM-B93BbvAA4Pmo9JidQnXd3wvXBOY"
+REACT_APP_GOOGLE_API_KEY="AIzaSyC1jv_O7Ixs44xeLFT2oUHoLf3T1ZqwbGo"
