--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "formik": "^2.4.2",
+    "framer-motion": "^10.15.1",
+    "google-places-web": "^2.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -25,6 +27,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.1",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.11",
